; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_hwregs.c_acpi_hw_write_multiple.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_hwregs.c_acpi_hw_write_multiple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_generic_address = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.acpi_generic_address*, %struct.acpi_generic_address*)* @acpi_hw_write_multiple to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acpi_hw_write_multiple(i32 %0, %struct.acpi_generic_address* %1, %struct.acpi_generic_address* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.acpi_generic_address*, align 8
  %7 = alloca %struct.acpi_generic_address*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store %struct.acpi_generic_address* %1, %struct.acpi_generic_address** %6, align 8
  store %struct.acpi_generic_address* %2, %struct.acpi_generic_address** %7, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load %struct.acpi_generic_address*, %struct.acpi_generic_address** %6, align 8
  %11 = call i32 @acpi_hw_write(i32 %9, %struct.acpi_generic_address* %10)
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %8, align 4
  %13 = call i64 @ACPI_FAILURE(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %3
  %16 = load i32, i32* %8, align 4
  store i32 %16, i32* %4, align 4
  br label %28

17:                                               ; preds = %3
  %18 = load %struct.acpi_generic_address*, %struct.acpi_generic_address** %7, align 8
  %19 = getelementptr inbounds %struct.acpi_generic_address, %struct.acpi_generic_address* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %17
  %23 = load i32, i32* %5, align 4
  %24 = load %struct.acpi_generic_address*, %struct.acpi_generic_address** %7, align 8
  %25 = call i32 @acpi_hw_write(i32 %23, %struct.acpi_generic_address* %24)
  store i32 %25, i32* %8, align 4
  br label %26

26:                                               ; preds = %22, %17
  %27 = load i32, i32* %8, align 4
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %26, %15
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @acpi_hw_write(i32, %struct.acpi_generic_address*) #1

declare dso_local i64 @ACPI_FAILURE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
